@@ -1,3 +1,8 @@
+2008-03-21  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/switch.test: Added more tests of regexp-mode compilation of
+	the [switch] command. [Bug 1854435]
+
 2008-03-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tcl.h, generic/tclThreadAlloc.c: Tidied up the declarations
